--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -48,7 +48,7 @@
         android:textSize="25sp"
         android:textColor="@color/colorPrimaryDark"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-        android:text="Amrita\nRepository"/>
+        android:text="Welcome !"/>
     <android.support.design.widget.TextInputLayout
         android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -118,6 +118,7 @@
                     <TextView
                         android:textColor="@android:color/black"
                         android:layout_width="wrap_content"
+                        android:gravity="center"
                         android:layout_height="wrap_content"
                         android:text="Academic Timetable"/>
                 </LinearLayout>
@@ -167,6 +168,7 @@
                     <TextView
                         android:textColor="@android:color/black"
                         android:layout_width="wrap_content"
+                        android:gravity="center"
                         android:layout_height="wrap_content"
                         android:text="Exam Schedule"/>
                 </LinearLayout>
@@ -279,6 +281,7 @@
                     <TextView
                         android:textColor="@android:color/black"
                         android:layout_width="wrap_content"
+                        android:gravity="center"
                         android:layout_height="wrap_content"
                         android:text="Campus Wifi Status"/>
                 </LinearLayout>
