--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -283,7 +283,7 @@
                         android:layout_width="wrap_content"
                         android:gravity="center"
                         android:layout_height="wrap_content"
-                        android:text="Campus Wifi Status"/>
+                        android:text="Campus WiFi Status"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
