--- a/app/src/main/res/menu/activity_launching_drawer.xml
+++ b/app/src/main/res/menu/activity_launching_drawer.xml
@@ -30,7 +30,7 @@
             />
     </group>
 
-    <item android:title="Tools">
+    <item android:title="Extras">
         <menu>
             <item
                 android:id="@+id/nav_about"
