--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -36,6 +36,7 @@
             android:text="Rajkumar"
             android:layout_gravity="center"
             android:fontFamily="@font/cunia"
+            android:textColor="@color/colorPrimaryDark"
             android:gravity="center"
             android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>
         <TextView
