--- a/app/src/main/res/layout/timing_item.xml
+++ b/app/src/main/res/layout/timing_item.xml
@@ -5,8 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:padding="10dp">
 
     <TextView
         android:layout_width="wrap_content"
