--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -31,7 +31,8 @@
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
         android:layout_centerInParent="true"
         android:textAlignment="center"
-        android:text="Connection not available! "/>
+        android:text="Connection not available! "
+        tools:ignore="HardcodedText" />
 
     <ImageView
         android:id="@+id/empty_imageview"
