--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -57,14 +57,16 @@
             android:layout_marginRight="50dp"
             android:textColor="@color/colorBackground"
             android:background="@drawable/button"/>
-        <TextView
-            android:layout_width="wrap_content"
+        <Button
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Open Source Licenses"
+            android:onClick="ossLicenses"
             android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:text="Third Party Libraries\njsoup, asynchttpclient, picasso,\nmikhaellopez:circularimageview"/>
-
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:textColor="@color/colorBackground"
+            android:background="@drawable/button"/>
 
     </LinearLayout>
 </ScrollView>
