--- a/app/src/main/res/layout/activity_attendance.xml
+++ b/app/src/main/res/layout/activity_attendance.xml
@@ -17,6 +17,11 @@
     android:visibility="gone"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".aums.activities.AttendanceActivity">
-</ListView>
+    tools:context=".aums.activities.AttendanceActivity"/>
+    <com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/pdfView"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_height="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android" />
 </RelativeLayout>
