--- a/app/src/main/res/layout/attendance_item.xml
+++ b/app/src/main/res/layout/attendance_item.xml
@@ -6,55 +6,72 @@
     android:padding="10dp">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/image"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-        <ImageView android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:background="@color/colorPrimaryDark"
-            android:id="@+id/circle"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
-        <TextView
+        android:id="@+id/layout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="26%"
-            android:id="@+id/percentage"
+            android:id="@+id/image"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
 
+            <ImageView android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:background="@color/colorPrimaryDark"
+                android:id="@+id/circle"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="26%"
+                android:id="@+id/percentage"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_toEndOf="@id/image"
+            android:layout_width="wrap_content"
+            android:layout_marginStart="20dp"
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/title"
+                android:textColor="@color/colorPrimaryDark"
+                tools:text="Hello Attendance"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/attended"
+                tools:text="You attended 13 of 15 classes"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
     </RelativeLayout>
-
-    <LinearLayout
-        android:layout_toEndOf="@id/image"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="20dp"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
+    <RelativeLayout
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/layout1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/title"
-            android:textColor="@color/colorPrimaryDark"
-            tools:text="Hello Attendance"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/attended"
-            tools:text="You attended 13 of 15 classes"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
+            android:id="@+id/comments"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorAccent"
+            tools:text="You can bunk 3 more classes to get it down to 75%"/>
+    </RelativeLayout>
 
 </RelativeLayout>
