Adds Facebook Audience Network SDK  - Changes academic year to dynamic from hard coding  - Changes to dev.rajkumaar.co.in back!  - Version check in Firebase Realtime DB  - Adds progressbar for warming up
Signed-off-by: Rajkumar <rajkumaar2304@gmail.com>

--- a/app/src/main/res/layout/activity_exam_schedule.xml
+++ b/app/src/main/res/layout/activity_exam_schedule.xml
@@ -15,11 +15,19 @@
         android:layout_centerInParent="true"/>
     <ListView
         android:id="@+id/list"
+        android:layout_above="@id/banner_container"
         android:dividerHeight="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </ListView>
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        />
 
 
 </RelativeLayout>
