--- a/app/src/main/res/layout/activity_wifi_status.xml
+++ b/app/src/main/res/layout/activity_wifi_status.xml
@@ -110,4 +110,11 @@
         android:textColor="@color/colorBackground"
         android:background="@color/colorPrimaryDark"
         android:text="Refresh"/>
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        />
 </RelativeLayout>
