--- a/app/src/main/res/layout/activity_curriculum.xml
+++ b/app/src/main/res/layout/activity_curriculum.xml
@@ -3,7 +3,15 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     xmlns:android="http://schemas.android.com/apk/res/android" >
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        />
 <ScrollView android:layout_width="match_parent"
+    android:layout_above="@id/banner_container"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     xmlns:android="http://schemas.android.com/apk/res/android" >
