--- a/app/src/main/res/layout/activity_grades.xml
+++ b/app/src/main/res/layout/activity_grades.xml
@@ -5,6 +5,13 @@
     android:background="@color/colorBackground"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        />
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
@@ -14,6 +21,7 @@
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/list"
+        android:layout_above="@id/banner_container"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
