--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,7 @@
 <RelativeLayout android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingTop="20dp"
+    android:layout_above="@id/banner_container"
     android:background="@color/colorBackground"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -77,4 +78,11 @@
             android:layout_height="wrap_content"/>
 
     </RelativeLayout>
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        />
 </RelativeLayout>
