--- a/app/src/main/res/layout/activity_marks.xml
+++ b/app/src/main/res/layout/activity_marks.xml
@@ -14,10 +14,18 @@
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/list"
+        android:layout_above="@id/banner_container"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:clipToPadding="false"
         android:layout_height="wrap_content"
         tools:context=".aums.activities.AttendanceActivity">
     </android.support.v7.widget.RecyclerView>
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        />
 </RelativeLayout>
