--- a/app/src/main/res/layout/activity_timetable.xml
+++ b/app/src/main/res/layout/activity_timetable.xml
@@ -9,6 +9,13 @@
         tools:ignore="HardcodedText"
         android:orientation="vertical"
         tools:context=".timetable.AcademicTimetableActivity">
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        />
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
