--- a/app/src/main/res/layout/activity_train_bus_timings.xml
+++ b/app/src/main/res/layout/activity_train_bus_timings.xml
@@ -8,7 +8,15 @@
     android:background="@color/colorBackground"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_above="@id/banner_container"
     android:id="@+id/timings_list"
     android:layout_height="match_parent"
     tools:context=".timings.TimingsActivity"/>
+    <LinearLayout
+        android:id="@+id/banner_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        />
 </RelativeLayout>
